Thu Jan 28 20:04:52 1999  Theodore Y. Ts'o  <tytso@mit.edu>

	* trval.c: Now understands krb5 structure elements.

	* krb5_encode_test.c: Pass trval type hints to trval2() so that
		datastructures get properly decoded.

Fri Jan 22 02:08:59 1999  Theodore Y. Ts'o  <tytso@mit.edu>

	* trval.c: Added usage message, better options parsing, and
		support for two new options: -hex, which will accept the
		asn.1 encoding in hex (i.e., from a packet dump), and
		-krb5, which instructs the trval to print out the krb5
		interpretations of the data types.  Trval will now also
		try to interpret the field names of known krb5 structures
		if -krb5 is specified.

1998-11-13  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* Makefile.in: Set the myfulldir and mydir variables (which are
		relative to buildtop and thisconfigdir, respectively.)

Thu Dec  3 22:27:08 1998  Tom Yu  <tlyu@mit.edu>

	* krb5_decode_test.c (main): Add variant test cases on
	enc_tkt_part to test bit string values that aren't exactly 32
	bits, including 38, 40, 29, and 24 bits to test boundary
	conditions.

1998-05-06  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* krb5_encode_test.c (PRS): POSIX states that getopt returns -1
		when it is done parsing options, not EOF.

Mon Mar 30 13:51:58 1998  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* ktest_equal.h: Add prototypes for ktest_equal_sam_challenge and 
	ktest_equal_sam_response

	* ktest.c (ktest_make_sample_sam_response): Remove unused variable.

	* krb5_decode_test.c, krb5_decode_test.c (main): Declare main as
        int not void.

Wed Feb 18 16:27:56 1998  Tom Yu  <tlyu@mit.edu>

	* Makefile.in: Remove trailing slash from thisconfigdir.  Fix up
	BUILDTOP for new conventions.

Mon Feb  2 16:46:31 1998  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* Makefile.in: Define BUILDTOP and thisconfigdir in the Makefile

Sun Aug 17 14:26:19 1997  Ezra Peisach  <epeisach@mit.edu>

	* Makefile.in (SRCS): Add $(srcdir).

Thu Mar 20 16:50:10 1997  Ezra Peisach  <epeisach@mit.edu>
